create basic API/user interface
tested my API with cURL.  a lot of work left to do on the user
interface.

--- a/views/partials/activeCalls.jade
+++ b/views/partials/activeCalls.jade
@@ -1,2 +1,6 @@
-div(ng-repeat='call in calls')
-  a(ng-href='#/call/{{call.number}}') {{call.number}}
+div(ng-show='calls')
+  p There are {{calls.length}} active calls.
+  div(ng-repeat='call in calls')
+    a(ng-href='#/call/{{call.number}}') {{call.number}}
+div(ng-hide='calls').
+  Loading...
