--- a/views/partials/call.jade
+++ b/views/partials/call.jade
@@ -1,5 +1,11 @@
 div
   p #[a(href='#/') back]
-  p phone number is {{call.number}}
-  p(ng-repeat='(key, value) in call.data').
-    {{key}}: {{value}}
+  div(ng-hide='call.fail')
+    p Phone number is {{call.number}}
+  div(ng-show='call.fail')
+    p {{call.fail}}
+  div(ng-show='call.data')
+    p(ng-repeat='(key, value) in call.data').
+      {{key}}: {{value}}
+  div(ng-hide='call.data || call.fail').
+    Loading...
