--- a/views/partials/dash.jade
+++ b/views/partials/dash.jade
@@ -1,2 +1,3 @@
-p test
+div(class='row top-panel card-panel red lighten-4')
+  div(class='col s12') Welcome to 911 responder.#[br] There are {{calls.length}} active calls.
 active-calls(calls='calls')
