--- a/views/partials/call.jade
+++ b/views/partials/call.jade
@@ -1,11 +1,30 @@
 div
-  p #[a(href='#/') back]
-  div(ng-hide='call.fail')
-    p Phone number is {{call.number}}
-  div(ng-show='call.fail')
-    p {{call.fail}}
-  div(ng-show='call.data')
-    p(ng-repeat='(key, value) in call.data').
-      {{key}}: {{value}}
-  div(ng-hide='call.data || call.fail').
-    Loading...
+  div.row.top-panel.card-panel.red.lighten-4
+    span(ng-hide='call.fail')
+      span(ng-show='call.data').
+        Caller's number is {{call.number}}
+      span(ng-hide='call.data'). Loading...
+    span(ng-show='call.fail').
+      {{call.fail}}
+  .row.card-panel
+    .col.s12.m6
+      div(ng-show='call.data')
+        table
+          thead
+            tr
+              td(data-field='key') Field
+              td(data-field='value') Value
+          tr
+            td Duration
+            td #[min-timer(time='call.time')]
+          tr
+            td Name
+            td {{data.name}}
+        .vspace
+        p(ng-show='call.data') debug k/v pairs:
+        p(ng-repeat='(key, value) in call.data').
+          {{key}}: {{value}}
+      div.tcenter(ng-hide='call.data').
+        Loading...
+    .col.s12.m6.
+      Map goes here.
