--- a/views/partials/call.jade
+++ b/views/partials/call.jade
@@ -26,5 +26,5 @@ div
           {{key}}: {{value}}
       div.tcenter(ng-hide='call.data').
         Loading...
-    .col.s12.m6.
-      Map goes here.
+    .col.s12.m6.mymap
+      map-pos(lat='lat' lng='lng')
